force-app/main/default/objects/Calificaci_n_del_cliente__c/Calificaci_n_del_cliente__c.object-meta.xml
<CustomObject>
    <label>Calificación del cliente</label>
    <nameField>
        <label>Nombre de Calificación del cliente</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calificaciones del cliente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>