force-app/main/default/objects/Calificaci_n_del_cliente__c/fields/Calificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Calificaci_n__c</fullName>
    <label>Calificación</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>