force-app/main/default/objects/Calificaci_n_del_cliente__c/fields/Criterio__c.field-meta.xml
<CustomField>
    <fullName>Criterio__c</fullName>
    <label>Criterio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tipo Persona</fullName>
            </value>
            <value>
                <fullName>Tipo Cliente</fullName>
            </value>
            <value>
                <fullName>Doc. Identidad</fullName>
            </value>
            <value>
                <fullName>Tipo Relación</fullName>
            </value>
            <value>
                <fullName>Nivel Organizacional</fullName>
            </value>
            <value>
                <fullName>Profesión</fullName>
            </value>
            <value>
                <fullName>Ocupación</fullName>
            </value>
            <value>
                <fullName>Actividad Economica</fullName>
            </value>
            <value>
                <fullName>Canal Contrata</fullName>
            </value>
            <value>
                <fullName>Sucursal</fullName>
            </value>
            <value>
                <fullName>Forma de pago</fullName>
            </value>
            <value>
                <fullName>Tipo de transacción</fullName>
            </value>
            <value>
                <fullName>Responsable del pago</fullName>
            </value>
            <value>
                <fullName>Origen de los fondo</fullName>
            </value>
            <value>
                <fullName>Procedencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>