force-app/main/default/objects/Calificaci_n_del_cliente__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calificaciones del cliente</relationshipLabel>
    <relationshipName>Calificaciones_del_cliente</relationshipName>
    <type>Lookup</type>
</CustomField>