force-app/main/default/objects/Calificaci_n_del_cliente__c/fields/Descripci_n__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n__c</fullName>
    <label>Descripción</label>
    <length>50</length>
    <type>Text</type>
</CustomField>