force-app/main/default/objects/Calificaci_n_del_cliente__c/fields/IDKey__c.field-meta.xml
<CustomField>
    <fullName>IDKey__c</fullName>
    <externalId>true</externalId>
    <label>IDKey</label>
    <length>200</length>
    <type>Text</type>
</CustomField>