force-app/main/default/objects/Calificaci_n_del_cliente__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Calificaciones del cliente</relationshipLabel>
    <relationshipName>Calificaciones_del_cliente</relationshipName>
    <type>Lookup</type>
</CustomField>