force-app/main/default/objects/Calificaci_n_del_cliente__c/fields/Ponderaci_n__c.field-meta.xml
<CustomField>
    <fullName>Ponderaci_n__c</fullName>
    <label>Ponderación</label>
    <length>25</length>
    <type>Text</type>
</CustomField>