force-app/main/default/objects/Calificaci_n_del_cliente__c/fields/Tipo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cliente__c</fullName>
    <label>Tipo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Juridico</fullName>
            </value>
            <value>
                <fullName>Natural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>